# gitutor

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
gitutor/: cli.py  util.py
gitutor/branch/: change.py  commands.py  create.py  delete.py  utils.py
gitutor/compare/: color_diff.py  commands.py
gitutor/goBack/: commands.py  test_commands.py
gitutor/ignore/: commands.py  tests.py
gitutor/init/: commands.py  test_commands.py
gitutor/lesson/: commands.py  lessons.py
gitutor/save/: commands.py  test_commands.py
